demo script