@@ -1,18 +1,16 @@
-# helper
+# Helper
 fzuzfu  das ist     ....
+
 
 ## Requirements
 - Windows OS
 - Installed [git](https://github.com/git-for-windows/git/releases/download/v2.47.1.windows.2/Git-2.47.1.2-64-bit.exe)
-- Installed [java jdk 23](https://download.oracle.com/java/23/latest/jdk-23_windows-x64_bin.exe) 
-- Download and extract [JavaFX 23.0.1](https://download2.gluonhq.com/openjfx/23.0.1/openjfx-23.0.1_windows-x64_bin-sdk.zip) 
-- Copy source code to your PC `git clone https://github.com/valeria2504/helper.git`
-- 
+- Installed [java jdk 23](https://download.oracle.com/java/23/latest/jdk-23_windows-x64_bin.exe)
 
 
 ## Usage manual
-- vcv
-- cv
-- 
-
+- Copy source code to your PC `git clone https://github.com/valeria2504/helper.git`
+- Open `helper\demo` directory
+- Open **run.bat** file (or alternative open CMD, `cd helper\demo` and run `java --module-path "\lib" --add-modules javafx.controls,javafx.fxml -jar sample.jar
+`)
 
